...

    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>


    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
...
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="transition_item">transition item</string>
    <string name="search_book">Search Book</string>
    <string name="mobileno">Mobile Number</string>
    <string name="dept">Department</string>
    <string name="library_no">Library Number</string>

    <string name="book_due_notification_title_template">Book due: %1$s</string>

...
